fix: add little gap to status indicator

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -1087,7 +1087,7 @@ code {
   position: absolute;
   top: 50%;
   background-color: transparent;
-  left: 0;
+  left: 4px;
 }
 
 /* VERSION NUMBER */
